name:                e1337
version:             0.1.0.0
synopsis:            A 1984 Elite-inspired space-sim game
description:         Please see the README on GitHub at <https://github.com/madjestic/e1337#readme>
homepage:            https://github.com/madjestic/e1337
license:             BSD3
license-file:        LICENSE
author:              madjestic
maintainer:          madjestic13@gmail.com
copyright:           Vladimir Lopatin
category:            Game
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
                  ChangeLog.md
                  README.md

source-repository head
  type: git
  location: https://github.com/madjestic/e1337

library
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , OpenGL >=3.0.2.0
      , Yampa >=0.10.6
      , sdl2 >=2.3.0
      , linear >=1.20.7
  exposed-modules:
      Input
      Geometry
      Types
  other-modules:
      Paths_e1337
                                    
  default-language:
      Haskell2010
                     
executable e1337
  main-is:             Main.hs
  hs-source-dirs:
                 app
               , src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , e1337
              , aeson >= 1.3.1.1
              , text >=1.2.2.2
              , Yampa >=0.10.6
              , OpenGL >=3.0.2.0
              , filepath >= 0.4.14
              , bytestring >=0.10.8.1
              , sdl2 >=2.3.0
              , linear >=1.20.7
  other-modules:
      Paths_e1337
  default-language:    Haskell2010

